feat: add graph

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,15 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Симулятор РКН</title>
+    <link rel="stylesheet" href="styles/main.css">
     <style>
         :root {
-            --background-color: #121212;
             --border-color: #121212;
-        }
-
-        body {
-            background-color: var(--background-color);
-            color: #ffffff;
         }
 
         .main {
@@ -73,6 +68,7 @@
             border-radius: 10px;
         }
 
+
         .button-link:hover {
             background-color: rgb(57, 5, 100);
         }
@@ -101,7 +97,7 @@
         </tr>
         <tr>
             <td id="ref">
-                <p><a href="https://example.com" class="button-link">Симулятор РКН*</a></p>
+                <p><a href="shot_page.html" class="button-link">Симулятор РКН*</a></p>
             </td>
         </tr>
         <tr>
