--- a/frontend/shot_page.html
+++ b/frontend/shot_page.html
@@ -15,28 +15,82 @@
             width: 100%;
             height: auto;
             border-collapse: collapse;
-            border: 2px solid var(--border-color);
+            border: 2px solid var(--background-color);
         }
 
         .main td {
-            border: 2px solid var(--border-color);
+            border: 2px solid var(--background-color);
             /* width: 50%;
             height: 100px; */
         }
 
-        #results {
+        .scroll {
+            height: 300px;
+            overflow-x: auto;
+            margin-top: 0px;
+            margin-bottom: 20px;
+        }
+
+        .scrollable-cell {
+            width: 400px;
+        }
+
+        .scrollable-cell table {
             width: 100%;
-            height: 100%;
-            border-collapse: collapse;
-            border: 2px solid var(--result-border-color);
+            table-layout: fixed;
+            border: none;
         }
 
-        #results th {
+        .scrollable-cell thead th {
+            font-weight: bold;
+            text-align: left;
+            border: none;
+            padding: 10px 15px;
+            /* background: var; */
+            font-size: 14px;
             border: 2px solid var(--result-border-color);
+
+            /* border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd; */
         }
 
-        #results td {
+        .scrollable-cell tbody td {
+            text-align: left;
+            /* border-left: 1px solid #ddd;
+            border-right: 1px solid #ddd; */
             border: 2px solid var(--result-border-color);
+            padding: 10px 15px;
+            font-size: 14px;
+            vertical-align: top;
+        }
+
+        /* .scrollable-cell tbody tr:nth-child(even) {
+            background: #f3f3f3;
+        } */
+
+        #results col:nth-child(1),
+        #results col:nth-child(2),
+        #results col:nth-child(3) {
+            width: 50px;
+        }
+
+        #results col:nth-child(4) {
+            width: 100px;
+        }
+
+        #results-thead col:nth-child(1),
+        #results-thead col:nth-child(2),
+        #results-thead col:nth-child(3) {
+            width: 50px;
+        }
+
+        #results-thead col:nth-child(4) {
+            width: 100px;
+        }
+
+        .scroll {
+            height: 300px;
+            overflow-x: auto;
         }
 
         #jxgbox {
@@ -48,8 +102,10 @@
     <script type="text/javascript" charset="UTF-8"
         src="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraphcore.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraph.css" />
-    <script src="scripts/config.js" defer></script>
-    <script src="scripts/shot_page/area.js" defer></script>
+    <script src="scripts/config.js"></script>
+    <script type="module" src="scripts/shot_page/area.js"></script>
+    <script type="module" src="scripts/shot_page/checkResult.js"></script>
+    <script type="module" src="scripts/shot_page/checkShot.js"></script>
 </head>
 
 <body>
@@ -61,18 +117,19 @@
         </tr>
         <tr>
             <td colspan="3">
-                <p>Штраф компании Гугл**: <span id="fine"></span></p>
+                <p>Штраф компании Гугл**: <span id="fine"></span>$</p>
+                <script>document.getElementById('fine').textContent = valueFine;</script>
             </td>
         </tr>
         <tr>
             <td>
                 <form id="hitForm">
                     <label for="r">R(от 0 до 5):</label>
-                    <input type="number" id="r" name="r" step="0.1"><br><br>
+                    <input type="number" id="r" name="r" step="0.000001"><br><br>
                     <label for="x">X(от -5 до 5):</label>
-                    <input type="number" id="x" name="x" step="0.1"><br><br>
+                    <input type="number" id="x" name="x" step="0.000001"><br><br>
                     <label for="y">Y(от -5 до 5):</label>
-                    <input type="number" id="y" name="y" step="0.1"><br><br>
+                    <input type="number" id="y" name="y" step="0.000001"><br><br>
                     <button type="submit" id="submit-btn">Оштрафовать</button>
                     <button type="button" id="updateRButton">Обновить значение R</button>
                 </form>
@@ -80,13 +137,13 @@
             <td>
                 <div id="jxgbox"></div>
             </td>
-            <td>
-                <table id="results">
+            <td class="scrollable-cell">
+                <table id="results-thead">
                     <colgroup>
-                        <col style="width: 100px">
-                        <col style="width: 100px">
-                        <col style="width: 100px">
-                        <col style="width: 200px">
+                        <col>
+                        <col>
+                        <col>
+                        <col>
                     </colgroup>
                     <thead>
                         <tr>
@@ -96,10 +153,20 @@
                             <th>Штраф</th>
                         </tr>
                     </thead>
-                    <tbody>
-
-                    </tbody>
                 </table>
+                <div class="scroll">
+                    <table id="results">
+                        <colgroup>
+                            <col>
+                            <col>
+                            <col>
+                            <col>
+                        </colgroup>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
 
             </td>
         </tr>
