feat: :sparkles: add return button

--- a/frontend/shot_page.html
+++ b/frontend/shot_page.html
@@ -97,6 +97,22 @@
             width: 500px;
             height: 500px;
         }
+
+        #ref {
+            font-size: 15px;
+        }
+
+                .button-link {
+            display: inline-block;
+            padding: 10px 20px;
+            font-size: 30px;
+            color: white;
+            background-color: rgb(150, 40, 240);
+            text-align: center;
+            text-decoration: none;
+            border-radius: 10px;
+        }
+
     </style>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script type="text/javascript" charset="UTF-8"
@@ -110,6 +126,11 @@
 
 <body>
     <table class="main">
+        <tr>
+            <td colspan="3" id="ref">
+                <p><a href="index.html" class="button-link"><-</a></p>
+            </td>
+        </tr>
         <tr>
             <td colspan="3" class="siteName">
                 <p>Симулятор РКН*</p>
