--- a/frontend/shot_page.html
+++ b/frontend/shot_page.html
@@ -114,11 +114,58 @@
         }
 
     </style>
+    <script src="https://unpkg.com/ipfs/dist/index.min.js"></script>
+    <script src="https://unpkg.com/orbit-db/dist/orbitdb.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
     <script type="text/javascript" charset="UTF-8"
         src="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraphcore.js"></script>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/jsxgraph/distrib/jsxgraph.css" />
     <script src="scripts/config.js"></script>
+    <!-- <script src="scripts/shot_page/initdb.js"></script> -->
+    <script>
+        async function initDB() {
+            const ipfs = await Ipfs.create({ host: 'localhost', port: '5001', protocol: 'http', preload: { enabled: false }});
+            const orbitdb = await OrbitDB.createInstance(ipfs);
+
+            const newdb = await orbitdb.keyvalue('user-points-database');
+            await newdb.load();
+            return newdb;
+        }
+
+        async function addPoints(db, userAddress, points) {
+            const existingPoints = db.get(userAddress) || [];
+            const updatedPoints = [...existingPoints, ...points];
+            await db.put(userAddress, updatedPoints);
+            console.log('Точки добавлены для пользователя:', userAddress);
+        }
+
+        async function getPoints(db, userAddress) {
+            const points = db.get(userAddress) || [];
+            return points;
+        }
+
+        document.addEventListener('DOMContentLoaded', async () => {
+            db = await initDB();
+            points = await getPoints(db, userAddress);
+            console.log(points);
+            points.forEach(point => {
+                const table = document.querySelector('#results tbody');
+                const newRow = table.insertRow();
+
+                const cellX = newRow.insertCell(0);
+                const cellY = newRow.insertCell(1);
+                const cellR = newRow.insertCell(2);
+                const cellResult = newRow.insertCell(3);
+
+                cellX.textContent = point.x;
+                cellY.textContent = point.y;
+                cellR.textContent = point.r;
+                cellResult.textContent = point.fine;
+
+                valueFine += point.fine;    
+            });
+        });
+    </script>
     <script type="module" src="scripts/shot_page/area.js"></script>
     <script type="module" src="scripts/shot_page/checkResult.js"></script>
     <script type="module" src="scripts/shot_page/checkShot.js"></script>
